--- a/reactfolder/package.json
+++ b/reactfolder/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hyunwoo22.github.io/reactghpage",
+  "homepage": "https://hyunwoo22.github.io/reactghpage/",
   "name": "reactfolder",
   "version": "0.1.0",
   "private": true,
